adicionei link do google

--- a/trybe-exercicios/fundamentos/bloco-3-introducao-a-html-e-css/dia-1-html-css-estruturas-de-pagina/index.html
+++ b/trybe-exercicios/fundamentos/bloco-3-introducao-a-html-e-css/dia-1-html-css-estruturas-de-pagina/index.html
@@ -24,5 +24,12 @@
     <p id="Luciana">
       lucianalucianalucianalucianalucianalucianalucianalucianalucianalucianalucianalucianalucianalucianalucianalucia
     </p>
+    <p>
+      <a
+        href="https://www.google.com/webhp?hl=pt-BR&sa=X&ved=0ahUKEwjwqt-nur_5AhVRlJUCHf3wDfsQPAgI"
+        target="_blank"
+        >Link para página do Google</a
+      >
+    </p>
   </body>
 </html>
