--- a/trybe-exercicios/fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/index2.html
+++ b/trybe-exercicios/fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/index2.html
@@ -7,8 +7,10 @@
   </head>
   <body>
     <h1>Exercícios de fixação 3.3</h1>
-    <img src="https://bit.ly/39HLUyi" alt="jumpMario" class="super-mario" />
-    <img src="https://bit.ly/3arGfMc" alt="goomba" class="goomba" />
+    <div>
+      <img src="https://bit.ly/39HLUyi" alt="jumpMario" class="super-mario" />
+      <img src="https://bit.ly/3arGfMc" alt="goomba" class="goomba" />
+    </div>
     <img src="https://bit.ly/3AVnjks" alt="bowser" class="bowser" />
     <p class="speech">Goomba, do something!</p>
     <img src="https://bit.ly/3tmxgED" alt="baloon" class="baloon" />
