--- a/trybe-exercicios/fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/index5.html
+++ b/trybe-exercicios/fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/index5.html
@@ -26,32 +26,41 @@
     </ol>
     <h3 class="header">As maiores linguagens de programação:</h3>
     <ul class="programming-language">
-      <li>Python</li>
-      <li>Java</li>
-      <li>JavaScript</li>
+      <li class="blue">Python</li>
+      <li class="rosa">Java</li>
+      <li class="blue">JavaScript</li>
       <li>C#</li>
       <li>C / C++</li>
     </ul>
     <h3 class="header">Maiores aliados de uma pessoa desenvolvedora:</h3>
     <ul class="sites">
       <li>
-        <a href="https://pt.stackoverflow.com/" target="_blank"
+        <a href="https://pt.stackoverflow.com/" target="_blank" class="laranja"
           >StackOverflow</a
         >
       </li>
       <li>
-        <a href="https://www.w3schools.com/" target="_blank">W3Schools</a>
+        <a href="https://www.w3schools.com/" target="_blank" class="verde"
+          >W3Schools</a
+        >
       </li>
       <li>
-        <a href="https://developer.mozilla.org/pt-BR/" target="_blank"
+        <a
+          href="https://developer.mozilla.org/pt-BR/"
+          target="_blank"
+          class="preta"
           >MDN Web Docs</a
         >
       </li>
       <li>
-        <a href="https://devdocs.io/" target="_blank">DevDocs</a>
+        <a href="https://devdocs.io/" target="_blank" class="amarela"
+          >DevDocs</a
+        >
       </li>
       <li>
-        <a href="https://app.betrybe.com/" target="_blank">Trybe</a>
+        <a href="https://app.betrybe.com/" target="_blank" class="verde"
+          >Trybe</a
+        >
       </li>
     </ul>
   </body>
