--- a/trybe-exercicios/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-trbalahndo-com-elementos/exercicio/index.html
+++ b/trybe-exercicios/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-trbalahndo-com-elementos/exercicio/index.html
@@ -61,7 +61,6 @@
       const newH1 = document.createElement('h1')
       newH1.innerText = 'Exercício 5.2 - JavaScript DOM '
       bodyContainer.appendChild(newH1)
-      console.log(newH1)
       const newMain = document.createElement('main')
       newMain.className = 'main-content'
       bodyContainer.appendChild(newMain)
@@ -71,6 +70,42 @@
       const newP = document.createElement('p')
       newP.innerText = 'tesxto blablbalbalablablabal'
       newSection.appendChild(newP)
+      const leftSection = document.createElement('section')
+      leftSection.className = 'left-content'
+      newMain.appendChild(leftSection)
+      const rightSection = document.createElement('section')
+      rightSection.className = 'right-content'
+      newMain.appendChild(rightSection)
+      const newImg = document.createElement('img')
+      newImg.src = 'https://picsum.photos/200'
+      newImg.className = 'small-image'
+      leftSection.appendChild(newImg)
+      const newList = document.createElement('ul')
+      rightSection.appendChild(newList)
+      function insertTextList() {
+        let valoresLista = {
+          1: 'um',
+          2: 'dois',
+          3: 'três',
+          4: 'quatro',
+          5: 'cinco',
+          6: 'seis',
+          7: 'sete',
+          8: 'oito',
+          9: 'nove',
+          10: 'dez'
+        }
+        for (let i = 1; i <= 10; i += 1) {
+          const liElements = document.createElement('li')
+          liElements.innerHTML = valoresLista[i]
+          newList.appendChild(liElements)
+        }
+      }
+      insertTextList()
+      for (let i = 1; i <= 3; i += 1) {
+        let elementsH3 = document.createElement('h3')
+        newMain.appendChild(elementsH3)
+      }
     </script>
   </body>
 </html>
