--- a/trybe-exercicios/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/exercicios-fixacao/idenx.html
+++ b/trybe-exercicios/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/exercicios-fixacao/idenx.html
@@ -8,17 +8,21 @@
   <body>
     <h1>Formulário</h1>
     <form action="">
-      <label for="email">Email:</label>
-      <input
-        type="email"
-        placeholder="Digite seu email"
-        required
-        autocomplete="off"
-        autofocus
-      />
+      <label for="email"
+        >Email:
+        <input
+          type="email"
+          placeholder="Digite seu email"
+          required
+          autocomplete="off"
+          autofocus
+        />
+      </label>
       <br />
-      <label for="password">Senha:</label>
-      <input type="password" placeholder="Digite sua senha" required />
+      <label for="password"
+        >Senha:
+        <input type="password" placeholder="Digite sua senha" required />
+      </label>
       <br />
       <input type="checkbox" />Lembre-me
       <br />
