--- a/trybe-exercicios/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/exercicios/form.html
+++ b/trybe-exercicios/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/exercicios/form.html
@@ -68,8 +68,8 @@
     </label>
     <br />
     <label for="direito-imagem">
-      <input type="checkbox" id="direito-imagem" />Concordo que imagens das
-      minhas férias poderão ser usadas na divulgação de concursos futuros.
+      <input type="checkbox" id="direito-imagem" required />Concordo que imagens
+      das minhas férias poderão ser usadas na divulgação de concursos futuros.
     </label>
     <br />
     <button type="submit" id="button">Enviar</button>
