--- a/trybe-exercicios/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/exercicios/form.html
+++ b/trybe-exercicios/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/exercicios/form.html
@@ -3,77 +3,128 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Form</title>
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <label for="name"
-      >Nome Completo:
-      <input type="text" maxlength="40" minlength="10" id="name" />
-    </label>
-    <br />
-    <label for="email"
-      >E-mail:
-      <input type="email" maxlength="50" min="10" id="email" />
-    </label>
-    <br />
-    <label for="cidade">
-      <input
-        type="radio"
-        value="cidade"
-        class="favorite-destination"
-        name="places"
-        id="cidade"
-      />Cidade
-    </label>
-    <label for="campo">
-      <input
-        type="radio"
-        value="campo"
-        class="favorite-destination"
-        name="places"
-        id="campo"
-      />Campo
-    </label>
-    <label for="praia">
-      <input
-        type="radio"
-        value="praia"
-        class="favorite-destination"
-        name="places"
-        id="praia"
-      />Praia
-    </label>
-    <label for="montanha">
-      <input
-        type="radio"
-        value="montanhas"
-        class="favorite-destination"
-        name="places"
-        id="montanha"
-      />Montanhas
-    </label>
-    <br />
-    <p name="question">
-      Por que você deveria ser a pessoa desenvolvedora a ganhar o concurso
-      TrybeTrip?
-    </p>
-    <textarea name="question" id="text-area" maxlength="500"></textarea>
-    <br />
-    <p>Qual a melhor data para realizar sua viagem?</p>
-    <input type="date" />
-    <br />
-    <label for="receber-notificaçao">
-      <input type="checkbox" name="" id="receber-notificaçao" />Gostaria de
-      receber outras incríveis oportunidades oferecidas pela Trybe?
-    </label>
-    <br />
-    <label for="direito-imagem">
-      <input type="checkbox" id="direito-imagem" required />Concordo que imagens
-      das minhas férias poderão ser usadas na divulgação de concursos futuros.
-    </label>
-    <br />
-    <button type="submit" id="button">Enviar</button>
-    <button id="clear-button">Limpar</button>
+    <header class="container">
+      <h1 class="h1">Sorteio TrybeTrip</h1>
+    </header>
+    <div class="container">
+      <form action="">
+        <label for="name" class="form-label"
+          >Nome Completo:
+          <input
+            type="text"
+            maxlength="40"
+            minlength="10"
+            id="name"
+            class="form-control"
+          />
+        </label>
+        <br />
+        <label for="email" class="form-label"
+          >E-mail:
+          <input
+            type="email"
+            maxlength="50"
+            min="10"
+            id="email"
+            class="form-control"
+          />
+        </label>
+        <br />
+        <p class="lead">Para onde você gostaria de ir?</p>
+        <label for="cidade" class="form-check-label">
+          <input
+            class="form-check-input"
+            type="radio"
+            value="cidade"
+            name="places"
+            id="cidade"
+          />Cidade
+        </label>
+        <label for="campo" class="form-label">
+          <input
+            class="form-check-input"
+            type="radio"
+            value="campo"
+            name="places"
+            id="campo"
+          />Campo
+        </label>
+        <label for="praia" class="form-label">
+          <input
+            class="form-check-input"
+            type="radio"
+            value="praia"
+            name="places"
+            id="praia"
+          />Praia
+        </label>
+        <label for="montanha" class="form-label">
+          <input
+            class="form-check-input"
+            type="radio"
+            value="montanhas"
+            name="places"
+            id="montanha"
+          />Montanhas
+        </label>
+        <br />
+        <p name="question" class="lead">
+          Por que você deveria ser a pessoa desenvolvedora a ganhar o concurso
+          TrybeTrip?
+        </p>
+        <textarea
+          name="question"
+          id="text-area"
+          maxlength="500"
+          class="form-control"
+        ></textarea>
+        <br />
+        <p class="lead">Qual a melhor data para realizar sua viagem?</p>
+        <input type="date" class="form-control" id="datepicker" />
+        <br />
+        <label for="receber-notificaçao" class="form-label">
+          <input
+            type="checkbox"
+            name=""
+            id="receber-notificaçao"
+            class="form-check-input"
+          />Gostaria de receber outras incríveis oportunidades oferecidas pela
+          Trybe?
+        </label>
+        <br />
+        <label for="direito-imagem" class="form-label">
+          <input
+            type="checkbox"
+            id="direito-imagem"
+            class="form-check-input"
+            required
+          />Concordo que imagens das minhas férias poderão ser usadas na
+          divulgação de concursos futuros.
+        </label>
+        <br />
+        <button type="submit" id="button" class="btn btn-success">
+          Enviar
+        </button>
+        <button id="clear-button" class="btn btn-light">Limpar</button>
+      </form>
+    </div>
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+      crossorigin="anonymous"
+    ></script>
     <script src="script.js"></script>
   </body>
 </html>
