--- a/trybe-exercicios/front-end/secao-7-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global/index.html
+++ b/trybe-exercicios/front-end/secao-7-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global/index.html
@@ -38,24 +38,33 @@
         colors: ['white', 'black', 'red', 'green', 'blue', 'yellow'],
         index: 0,
       };
+      function criarCor() {
+        const oneChar = ['1', '2', '3', '4', '5', '6', '7', '8', '9', 'A', 'B', 'C', 'D', 'E', 'F'];
+        let cor = '#';
+        const aleatorio = () => Math.floor(Math.random() * oneChar.length);
+        for (let i = 0; i < 6; i += 1) {
+        cor += oneChar[aleatorio()];
+        }
+        return cor;
+      }
       const reducer = (state = INITIAL_STATE, action) => {
         switch (action.type) {
           case "NEXT_COLOR":
             return {
               ...state,
-              index: state.index < 5 && state.index + 1, 
+              index: state.index === state.colors.length - 1 ? 0 : state.index + 1, 
             }
 
           case "PREVIOUS_COLOR":
           return {
               ...state,
-              index: state.index > 0 && state.index - 1, 
+              index: state.index === 0 ? state.colors.length - 1 : state.index - 1, 
             }
           case "RANDOM_COLOR":
           return {
               ...state,
               colors: [...state.colors, criarCor()],
-              index: colors[colors.length -1 ], 
+              index: state.colors.length, 
             }
           default:
             return state;
@@ -79,6 +88,7 @@
       });
       buttonRandomColor.addEventListener('click', () => {
         store.dispatch(randomColor)
+        console.log(store.getState().colors)
       });
 
       store.subscribe(() => {
@@ -90,16 +100,6 @@
         div.style.backgroundColor = color[index];
       })
 
-      function criarCor() {
-        const oneChar = ['1', '2', '3', '4', '5', '6', '7', '8', '9', 'A', 'B', 'C', 'D', 'E', 'F'];
-        let cor = '#';
-        const aleatorio = () => Math.floor(Math.random() * oneChar.length);
-        for (let i = 0; i < 6; i += 1) {
-        cor += oneChar[aleatorio()];
-        }
-        return cor;
-      }
-      
     </script>
   </body>
 </html>
